--- a/templates/add_device.html
+++ b/templates/add_device.html
@@ -1,33 +1,48 @@
 {% extends "base.html" %}
 
+{% block title %}Add Device{% endblock %}
+
 {% block content %}
-<h1>Add Device</h1>
+<h1>{{ title }}</h1>
 <form id="add-device-form" method="post">
     {{ form.csrf_token }}
-    ...
-    <input type="submit" value="Add Device">
+    <div>
+        {{ form.device_name.label }} {{ form.device_name() }}
+    </div>
+    <div>
+        {{ form.mac_address.label }} {{ form.mac_address() }}
+    </div>
+    <div>
+        {{ form.device_type.label }} {{ form.device_type() }}
+    </div>
+    <div>
+        {{ form.assigned_ip.label }} {{ form.assigned_ip() }}
+    </div>
+    <div>
+        {{ form.submit() }}
+    </div>
 </form>
 
 <script>
-  $("#add-device-form").on("submit", function(event) {
-    event.preventDefault();
-    let formData = $(this).serialize();
+    $("#add-device-form").on("submit", function (event) {
+        event.preventDefault();
+        let formData = $(this).serialize();
 
-    $.ajax({
-      type: "POST",
-      url: "/add_device",
-      data: formData,
-      success: function(response) {
-        window.location.href = "/"; // Redirect to the home page
-      },
-      error: function(xhr, status, error) {
-        if (xhr.status == 409) { // Conflict - duplicate entry
-          alert("Error: Duplicate MAC Address.");
-        } else {
-          alert("An error occurred while adding the device.");
-        }
-      }
+        $.ajax({
+            type: "POST",
+            url: "/add-device",
+            data: formData,
+            success: function (response) {
+                window.location.href = "/"; // Redirect to the home page
+            },
+            error: function (xhr, status, error) {
+                if (xhr.status == 409) { // Conflict - duplicate entry
+                    alert("Error: Duplicate MAC Address.");
+                } else {
+                    alert("An error occurred while adding the device.");
+                }
+            }
+        });
     });
-  });
 </script>
 {% endblock %}
