--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,9 @@
 {% block title %}Device List{% endblock %}
 
 {% block content %}
-<!-- The rest of the window content -->
 <h1>{{ title }}</h1>
 
-<hr>
-<table>
+<table class="ui compact celled definition table">
     <thead>
         <tr>
             <th></th>
@@ -17,26 +15,37 @@
             <th>Device Type</th>
             <th>Date Added</th>
             <th>Date Modified</th>
-            <th></th>
+            <th>EDIT</th>
+            <th>DELETE</th>
         </tr>
     </thead>
     <tbody>
         {% for device in devices %}
         <tr>
-            <td><img src="{{ url_for('static', filename=device.device_type + '.png') }}" alt="{{ device.device_type }}"></td>
+            <td class="collapsing"><img src="{{ url_for('static', filename=device.device_type + '.png') }}" alt="{{ device.device_type }}"></td>
             <td>{{ device.device_name }}</td>
             <td>{{ device.assigned_ip }}</td>
             <td>{{ device.mac_address }}</td>
             <td>{{ device.device_type }}</td>
-            <td>{{ device.date_added.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-            <td>{% if device.date_modified %}{{ device.date_modified.strftime('%Y-%m-%d %H:%M:%S') }}{% endif %}</td>
+            <td>{{ device.date_added.strftime('%Y-%m-%d') }}</td>
+            <td>{% if device.date_modified %}{{ device.date_modified.strftime('%Y-%m-%d') }}{% endif %}</td>
             <td><a href="{{ url_for('edit_device', id=device.id) }}"><img src="{{ url_for('static', filename='edit.png') }}" alt="Edit Device"></a>
-            <td>
             <td><a href="{{ url_for('delete_device', id=device.id) }}"><img src="{{ url_for('static', filename='delete.png') }}" alt="Delete"></a></td>
-
-            <td><a href="{{ url_for('edit_device', id=device.id) }}">Edit</a></td>
         </tr>
         {% endfor %}
     </tbody>
+    <tfoot class="full-width">
+        <tr>
+            <th></th>
+            <th colspan="12">
+                <div class="ui right floated small primary labeled icon button">
+                    <a href="{{ url_for('add_device') }}"><i class="user icon"></i> Add Device </a>
+                </div>
+
+            </th>
+            </th>
+        </tr>
+    </tfoot>
 </table>
 {% endblock %}
+
